--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "doctrine/common": "^3.4",
+        "doctrine/orm": "3.0.x-dev",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "symfony/cache": "^6.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
