--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": "^8.1",
         "doctrine/common": "^3.4",
+        "doctrine/migrations": "^3.6",
         "doctrine/orm": "3.0.x-dev",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
