--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,12 @@
+COMPOSE_PROJECT_NAME=xenforo-bots
+NGINX_EXPOSED_PORT=80
+MYSQL_EXPOSED_PORT=3306
+MYSQL_ROOT_PASSWORD=
+XDEBUG_PORT=9000
+# to catch CLI commands without setting up a debugging environment, the PHP server in the IDE has to be the same
+# as the serverName field here
+PHP_IDE_CONFIG="serverName=xenforo-bots-nginx"
+
 APP_NAME=XenforoBots
 APP_ENV=local
 APP_KEY=
@@ -11,7 +20,7 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=bots
+DB_DATABASE=xenforo-bots
 DB_USERNAME=root
 DB_PASSWORD=
 
