--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.3",
+        "ext-pdo": "*",
         "doctrine/common": "^3.4",
         "doctrine/migrations": "^3.6",
         "doctrine/orm": "3.0.x-dev",
