--- a/composer.json
+++ b/composer.json
@@ -1,29 +1,22 @@
 {
-    "name": "laravel/laravel",
+    "name": "olml89/xenforo-bots-backend",
     "type": "project",
-    "description": "The Laravel Framework.",
-    "keywords": ["framework", "laravel"],
+    "description": "This is a backend platform to interact with the Xenforo Bots add-on and implement bot users that can interact in a human-like way with the rest of the users.",
+    "keywords": ["xenforo", "bots", "backend"],
     "license": "MIT",
     "require": {
         "php": "^8.3",
         "ext-pdo": "*",
-        "doctrine/common": "^3.4",
-        "doctrine/migrations": "^3.6",
-        "doctrine/orm": "3.0.x-dev",
+        "doctrine/orm": "^3.0",
+        "doctrine/migrations": "^3.7",
         "guzzlehttp/guzzle": "^7.2",
-        "laravel/framework": "^11.0",
-        "laravel/sanctum": "^4.0",
-        "laravel/tinker": "^2.8",
-        "symfony/cache": "^6.2"
+        "laravel/framework": "^11.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.0",
-        "laravel/sail": "^1.18",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^8.1",
         "phpunit/phpunit": "^10.0",
-        "spatie/laravel-ignition": "^2.0"
+        "mockery/mockery": "^1.4.4",
+        "nunomaduro/collision": "^8.1"
     },
     "autoload": {
         "psr-4": {
