--- a/composer.json
+++ b/composer.json
@@ -7,8 +7,9 @@
     "require": {
         "php": "^8.3",
         "ext-pdo": "*",
-        "doctrine/orm": "^3.0",
         "doctrine/migrations": "^3.7",
+        "doctrine/orm": "^3.0",
+        "symfony/cache": "^7.0",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^11.0"
     },
@@ -43,6 +44,9 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
+        ],
+        "create-testing-database": [
+            "@php artisan app:create-database --migrate --env=testing"
         ]
     },
     "extra": {
