--- a/composer.json
+++ b/composer.json
@@ -44,13 +44,13 @@
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "post-create-project-cmd": [
-            "@php artisan key:generate --ansi"
+            "@php artisan key:generate --ansi",
+            "@php artisan app:api-key:generate",
+            "@php artisan doctrine:migrations:migrate --no-interaction"
         ],
-        "create-database": [
-            "@php artisan app:create-database --migrate"
-        ],
-        "create-testing-database": [
-            "@php artisan app:create-database --migrate --env=testing"
+        "setup-testing-environment": [
+            "@php artisan app:api-key:generate --env=testing",
+            "@php artisan app:database:create --migrate --env=testing"
         ]
     },
     "extra": {
