--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,7 +30,7 @@ jobs:
         uses: shivammathur/setup-php@v2
         with:
           php-version: '8.3'
-          extensions: xdebug,pdo_mysql
+          extensions: xdebug, pdo, mysql, pdo_mysql
 
       - name: Install composer and dependencies
         uses: php-actions/composer@v6
